// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar should match snapshot with user 1`] = `
<Menu
  secondary={true}
>
  <LinkRoutes
    href="/"
  >
    <MenuItem
      fitted={true}
      header={true}
    >
      <Image
        as="img"
        height="36px"
        src="/static/images/Logo_Nav.png"
        ui={true}
        verticalAlign="middle"
      />
    </MenuItem>
  </LinkRoutes>
  <MenuMenu
    position="right"
  >
    <CreateMenu
      user={
        Object {
          "_json": Object {
            "avatar_url": "https://avatars2.githubusercontent.com/u/156229?v=4",
          },
          "displayName": "Fred",
          "id": undefined,
          "username": "fred",
        }
      }
    />
    <MenuItem>
      <mockConstructor
        user={
          Object {
            "_json": Object {
              "avatar_url": "https://avatars2.githubusercontent.com/u/156229?v=4",
            },
            "displayName": "Fred",
            "id": undefined,
            "username": "fred",
          }
        }
      />
    </MenuItem>
  </MenuMenu>
</Menu>
`;

exports[`navbar should match snapshot without user 1`] = `
<Menu
  secondary={true}
>
  <LinkRoutes
    href="/"
  >
    <MenuItem
      fitted={true}
      header={true}
    >
      <Image
        as="img"
        height="36px"
        src="/static/images/Logo_Nav.png"
        ui={true}
        verticalAlign="middle"
      />
    </MenuItem>
  </LinkRoutes>
  <MenuMenu
    position="right"
  >
    <CreateMenu />
    <MenuItem>
      <mockConstructor />
    </MenuItem>
  </MenuMenu>
</Menu>
`;
